# wasm-conversion-research

./: .gitignore  ACTIVE_PROSPECTS.md  BUILD_ORDER.md  CHRONOLOGY.md  CLAUDE.md  DEPLOYMENT_LEARNINGS.md  DEPLOYMENT_STRATEGY.md  EDGE_PROSPECTS.md  ELIMINATED.md  EXECUTIVE_SUMMARY.md  LEARNINGS.md  PRODUCTS_BUILT.md  PRODUCT_EVALUATION.md  PRODUCT_PROSPECTS.md  PROSPECTS.md  README.md
experiments/ammonia-wasm/: BLOCKERS.md  Cargo.toml
experiments/ammonia-wasm/src/: lib.rs
experiments/blurhash/: blurhash.js  blurhash.wasm  blurhash_wasm.c  test-node.mjs
experiments/dspfilters/: dspfilters.js  dspfilters.wasm  dspfilters_wasm.cpp  test-node.mjs
experiments/eigen/: eigen.js  eigen.wasm  eigen_wasm.cpp  test-node.mjs
experiments/ffmpeg-image-compressor/: README.md  index.html  package.json  server.ts
experiments/image-rs/: Cargo.toml  test-node.mjs
experiments/jq/: jq.js  jq.wasm  jq_wasm.c  test-node.mjs
experiments/lz4/: lz4.js  lz4.wasm  lz4_wasm.c  test-node.mjs
experiments/mathc/: mathc.js  mathc.wasm  mathc_wasm.c  test-node.mjs
experiments/maximilian/: maximilian.js  maximilian.wasm  (+2 more)
products/: BLURAPI.md  README.md  asset-hash.md  audio-dna.md  audiomill.md  blurhash-edge.md  compress-kit.md  freq-sense.md  hash-vault.md  imageo.md  math-viz.md  minify-edge.md  mosaicly.md  og-image-edge.md  parser-lab.md  physics-box.md  pixel-forge.md  pixel-perfect.md  readable-edge.md  sanitize-edge.md  sound-sculpt.md  spritify.md  thumbhash-edge.md  wave-shape.md  webhook-edge.md
research/: cpp-pegtl.md  cpp-plotting.md  ffmpeg-wasm.md  rust-csv.md
(+30 files in other folders)
